fix: harden font repair and classify NeoForge crashes